Add type management and config features
Introduces Type Management feature with full CRUD operations for types
and subtypes, accessible via the /types route. Implements new Config
page and related routes to facilitate navigation and configuration.
Updates styles and navigation for integration of new functionality.
Renames project name for deployment.

Addresses improvements in inventory and type operations.

--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write .",
-    "deploy": "yarn build && wrangler pages deploy ./dist --project-name=mtc",
+    "deploy": "yarn build && wrangler pages deploy ./dist --project-name=house",
     "predeploy": "yarn build"
   },
   "dependencies": {
